# esp32_tracker_backend

./: .env  Cargo.toml
migrations/: 20260126233643_init.sql
src/: main.rs
web/: index.html
