[package]
name = "esp32_tracker_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "chrono" ] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wincode = { version = "0.3.1", features = ["derive"] }
